# vfs.libarchive

./: .travis.yml  CMakeLists.txt  FindLZ4.cmake  FindLZO2.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/common/bz2/: CMakeLists.txt  bz2.txt  flags.txt
depends/common/libarchive/: 01-die-Werror.patch  02-android-include.patch  03-android-include.patch  deps.txt  flags.txt  libarchive.sha256  libarchive.txt
depends/common/lz4/: 01-cmake-in-top.patch  01-run-cmake-from-top-directory.patch  02-disable-executables.patch  CMakeLists.txt  flags.txt  lz4.sha256  lz4.txt
depends/common/lzo2/: 01-disable-tests.patch  flags.txt
depends/common/openssl/: CMakeLists.txt
depends/common/xz-utils/: CMakeLists.txt  xz-utils.txt
depends/darwin_embedded/libarchive/: 02-tvos-fork.patch  libarchive.sha256
depends/windows/libarchive/: 01-static-please.patch  02-don-t-try_run-for-windows.patch  04-fix-uwp.patch  05-don-t-try_run-for-uwp.patch  flags.txt  libarchive.sha256  libarchive.txt
depends/windows/xz-utils/: 02-fix-deprecated-api.patch  CMakeLists.txt  xz-utils.sha256
depends/windowsstore/libarchive/: 01-static-please.patch  02-fix-uwp.patch  02-static-please.patch  03-don-t-try_run-for-uwp.patch  04-fix-uwp.patch  deps.txt  libarchive.txt
depends/windowsstore/xz-utils/: 01-fix-uwp-api.patch  CMakeLists.txt  xz-utils.txt
src/: ArchiveFile.cpp
vfs.libarchive/: addon.xml.in
vfs.libarchive/resources/language/resource.language.af_za/: strings.po
vfs.libarchive/resources/language/resource.language.am_et/: strings.po
vfs.libarchive/resources/language/resource.language.ar_sa/: strings.po
vfs.libarchive/resources/language/resource.language.ast_es/: strings.po
vfs.libarchive/resources/language/resource.language.az_az/: strings.po
vfs.libarchive/resources/language/resource.language.be_by/: strings.po
vfs.libarchive/resources/language/resource.language.bg_bg/: strings.po
vfs.libarchive/resources/language/resource.language.bs_ba/: strings.po
vfs.libarchive/resources/language/resource.language.ca_es/: strings.po
vfs.libarchive/resources/language/resource.language.cs_cz/: strings.po
vfs.libarchive/resources/language/resource.language.cy_gb/: strings.po
vfs.libarchive/resources/language/resource.language.da_dk/: strings.po
vfs.libarchive/resources/language/resource.language.de_de/: strings.po
vfs.libarchive/resources/language/resource.language.el_gr/: strings.po
vfs.libarchive/resources/language/resource.language.en_au/: strings.po
vfs.libarchive/resources/language/resource.language.en_gb/: strings.po
vfs.libarchive/resources/language/resource.language.en_nz/: strings.po
vfs.libarchive/resources/language/resource.language.en_us/: strings.po
vfs.libarchive/resources/language/resource.language.eo/: strings.po
vfs.libarchive/resources/language/resource.language.es_ar/: strings.po
vfs.libarchive/resources/language/resource.language.es_es/: strings.po
vfs.libarchive/resources/language/resource.language.es_mx/: strings.po
vfs.libarchive/resources/language/resource.language.et_ee/: strings.po
vfs.libarchive/resources/language/resource.language.eu_es/: strings.po
vfs.libarchive/resources/language/resource.language.fa_af/: strings.po
vfs.libarchive/resources/language/resource.language.fa_ir/: strings.po
vfs.libarchive/resources/language/resource.language.fi_fi/: strings.po
vfs.libarchive/resources/language/resource.language.fo_fo/: strings.po
vfs.libarchive/resources/language/resource.language.fr_ca/: strings.po
vfs.libarchive/resources/language/resource.language.fr_fr/: strings.po
vfs.libarchive/resources/language/resource.language.gl_es/: strings.po
vfs.libarchive/resources/language/resource.language.he_il/: strings.po
vfs.libarchive/resources/language/resource.language.hi_in/: strings.po
vfs.libarchive/resources/language/resource.language.hr_hr/: strings.po
vfs.libarchive/resources/language/resource.language.hu_hu/: strings.po
vfs.libarchive/resources/language/resource.language.hy_am/: strings.po
vfs.libarchive/resources/language/resource.language.id_id/: strings.po
vfs.libarchive/resources/language/resource.language.is_is/: strings.po
vfs.libarchive/resources/language/resource.language.it_it/: strings.po
vfs.libarchive/resources/language/resource.language.ja_jp/: strings.po
vfs.libarchive/resources/language/resource.language.ko_kr/: strings.po
vfs.libarchive/resources/language/resource.language.lt_lt/: strings.po
vfs.libarchive/resources/language/resource.language.lv_lv/: strings.po
vfs.libarchive/resources/language/resource.language.mi/: strings.po
vfs.libarchive/resources/language/resource.language.mk_mk/: strings.po
vfs.libarchive/resources/language/resource.language.ml_in/: strings.po
vfs.libarchive/resources/language/resource.language.mn_mn/: strings.po
vfs.libarchive/resources/language/resource.language.ms_my/: strings.po
vfs.libarchive/resources/language/resource.language.mt_mt/: strings.po
vfs.libarchive/resources/language/resource.language.my_mm/: strings.po
vfs.libarchive/resources/language/resource.language.nb_no/: strings.po
vfs.libarchive/resources/language/resource.language.nl_nl/: strings.po
vfs.libarchive/resources/language/resource.language.oc_fr/: strings.po
vfs.libarchive/resources/language/resource.language.os_os/: strings.po
vfs.libarchive/resources/language/resource.language.pl_pl/: strings.po
vfs.libarchive/resources/language/resource.language.pt_br/: strings.po
vfs.libarchive/resources/language/resource.language.pt_pt/: strings.po
vfs.libarchive/resources/language/resource.language.ro_md/: strings.po
vfs.libarchive/resources/language/resource.language.ro_ro/: strings.po
vfs.libarchive/resources/language/resource.language.ru_ru/: strings.po
vfs.libarchive/resources/language/resource.language.scn/: strings.po
vfs.libarchive/resources/language/resource.language.si_lk/: strings.po
(+17 files in other folders)
